css/style.css
/* Custom Stylesheet */
/**
 * Use this file to override Materialize files so you can update
 * the core Materialize files in the future
 *
 * Made By MaterializeCSS.com
 */
html {
  font-family: Muli,"Helvetica Neue",Arial,sans-serif;
}
body, .dark {
  background-color: #1c252c;
  color: white;
}
nav ul a { 
  color:#ffdd99;
  font-size: 18px;
}
nav ul a:hover {
  background-color: rgba(255, 255, 255, 0.2);
}
nav .brand-logo img {
  vertical-align: middle;
}

.page-footer .footer-copyright {
  background-color: rgba(255, 255, 255, 0.1);
}

p {
  line-height: 2rem;
}

.sidenav-trigger {
  color: #26a69a;
}

.parallax-container {
  min-height: 380px;
  line-height: 0;
  height: auto;
  color: rgba(255,255,255,.9);
}
  .parallax-container .section {
    width: 100%;
  }

@media only screen and (max-width : 992px) {
  .parallax-container .section {
    position: absolute;
    top: 40%;
  }
  #index-banner .section {
    top: 10%;
  }
}

@media only screen and (max-width : 600px) {
  #index-banner .section {
    top: 0;
  }
}

.icon-block {
  padding: 0 15px;
}
.icon-block .material-icons {
  font-size: inherit;
}

footer.page-footer {
  margin: 0;
}

